.archived/kubernetes/victoria-metrics/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics-dashboard
spec:
  hostnames: ["metrics.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-victoria-metrics
          namespace: monitoring-system
          port: 8429
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalertmanager
spec:
  hostnames: ["alert.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalertmanager-victoria-metrics
          namespace: monitoring-system
          port: 9093
